--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             arjs="sourceType: webcam; debugUIEnabled: false;"
         >
                 <a-image
-                    src="assets/logotip_1-1.png"
+                    src="assets/logo.png"
                     look-at="[gps-camera]"
                     scale="1 1 1"
                     gps-entity-place="latitude: 51.53124273215175; longitude: -313.9606450125576;"
