--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
                 <a-image
                     src="assets/logo.png"
                     look-at="[gps-camera]"
-                    scale="5 5 5"
+                    scale="15 15 15"
                     gps-entity-place="latitude: 51.53124273215175; longitude: -313.9606450125576;"
                 ></a-image>
 
-            <a-camera gps-camera rotation-reader></a-camera>
+            <a-camera
+
+			gps-camera="gpsMinDistance: 10"
+
+			rotation-reader
+			
+			>
+			
+			</a-camera>
         </a-scene>
     </body>
 </html>
