--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
                 <a-image
                     src="assets/logo.png"
                     look-at="[gps-camera]"
-                    scale="15 15 15"
+                    scale="10 10 10"
                     gps-entity-place="latitude: 51.53124273215175; longitude: -313.9606450125576;"
+                ></a-image>
+				
+				<a-image
+                    src="assets/prso.png"
+                    look-at="[gps-camera]"
+                    scale="15 15 15"
+                    gps-entity-place="latitude: 51.54124273215175; longitude: -313.9506450125576;"
                 ></a-image>
 
             <a-camera
