--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
                 ></a-image>
 
             <a-camera
-
-			gps-camera="gpsMinDistance: 30"
-
+			
 			rotation-reader
+
+			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0;"
+
 			
 			>
 			
