--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			
 			rotation-reader
 
-			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0;"
+			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0; far="30"
 
 			
 			>
