--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             <a-camera
 			
 			rotation-reader
+			 far=30
 
-			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0; far="30"
+			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0;"
 
 			
 			>
