--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a-camera
 			
 			rotation-reader
-			 far=30
+			 far="30"
 
 			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0;"
 
