--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			rotation-reader
 			 far="30"
 
-			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0; maxDistance=30"
+			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0; maxDistance: 30;"
 
 			
 			>
