--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <a-camera
 			
-			rotation-reader
+			rotation-reader=""
 			 far="30"
 
 			gps-camera="gpsMinDistance: 10; accelerationToMove: 1.0; maxDistance: 30;"
